; ModuleID = '/home/carl/AnghaBench/openpilot/phonelibs/nanovg/extr_nanovg.c_nvgPathWinding.c'
source_filename = "/home/carl/AnghaBench/openpilot/phonelibs/nanovg/extr_nanovg.c_nvgPathWinding.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@NVG_WINDING = common dso_local global float 0.000000e+00, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @nvgPathWinding(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca [2 x float], align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = getelementptr inbounds [2 x float], [2 x float]* %5, i64 0, i64 0
  %7 = load float, float* @NVG_WINDING, align 4
  store float %7, float* %6, align 4
  %8 = getelementptr inbounds float, float* %6, i64 1
  %9 = load i32, i32* %4, align 4
  %10 = sitofp i32 %9 to float
  store float %10, float* %8, align 4
  %11 = load i32*, i32** %3, align 8
  %12 = getelementptr inbounds [2 x float], [2 x float]* %5, i64 0, i64 0
  %13 = getelementptr inbounds [2 x float], [2 x float]* %5, i64 0, i64 0
  %14 = call i32 @NVG_COUNTOF(float* %13)
  %15 = call i32 @nvg__appendCommands(i32* %11, float* %12, i32 %14)
  ret void
}

declare dso_local i32 @nvg__appendCommands(i32*, float*, i32) #1

declare dso_local i32 @NVG_COUNTOF(float*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
